Modify Readme and Notebook

--- a/predicting-bulldozer-sales-price.ipynb
+++ b/predicting-bulldozer-sales-price.ipynb
@@ -578,6 +578,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Sort DataFrame by saledate\n",
+    "When working with time series data, it's good idea to sort it by date.Before doing further manipulations, it is also a good practice to make a copy of the original dataframe so when we manipulate the copy we will still get the original data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "205615   1989-01-17\n",
+       "274835   1989-01-31\n",
+       "141296   1989-01-31\n",
+       "212552   1989-01-31\n",
+       "62755    1989-01-31\n",
+       "Name: saledate, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values(by=[\"saledate\"], inplace=True, ascending=True)\n",
+    "df.saledate.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_temp = df.copy()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
