--- a/predicting-bulldozer-sales-price.ipynb
+++ b/predicting-bulldozer-sales-price.ipynb
@@ -9,14 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import sklearn"
+    "import sklearn\n",
+    "from sklearn.ensemble import RandomForestRegressor"
    ]
   },
   {
@@ -618,6 +619,235 @@
    "outputs": [],
    "source": [
     "df_temp = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Add datetime parameter for `saledate` column\n",
+    "To better understand the sales pattern in our dataset, we will try to make some new features to the saledate column. As sales are sometimes related to specified timeframe, we will extract date components from the saledate column. After doing feature engineering, we can remove the parent column to remove redundancy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_temp[\"saleYear\"] = df_temp.saledate.dt.year\n",
+    "df_temp[\"saleMonth\"] = df_temp.saledate.dt.month\n",
+    "df_temp[\"saleDay\"] = df_temp.saledate.dt.day\n",
+    "df_temp[\"saleDayOfWeek\"] = df_temp.saledate.dt.dayofweek\n",
+    "df_temp[\"saleDayOfYear\"] = df_temp.saledate.dt.dayofyear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_temp.drop(\"saledate\", axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Converting Columns containing string into categories"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before proceeding into modeling, it is necessary to further preprocess the data by converting all the columns containing values in string datatypes into numbers. One of the wats that we can turn our data into numbers is by converting them into pandas category. After converting into category, we can see that the value is now ordered sorted, as it is the case in the column `state`. When calling on codes attribute, we can see their numeric values that we can access.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for label, content in df_temp.items():\n",
+    "    if pd.api.types.is_string_dtype(content):\n",
+    "        df_temp[label] = content.astype(\"category\").cat.as_ordered()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 412698 entries, 205615 to 409203\n",
+      "Data columns (total 57 columns):\n",
+      "SalesID                     412698 non-null int64\n",
+      "SalePrice                   412698 non-null float64\n",
+      "MachineID                   412698 non-null int64\n",
+      "ModelID                     412698 non-null int64\n",
+      "datasource                  412698 non-null int64\n",
+      "auctioneerID                392562 non-null float64\n",
+      "YearMade                    412698 non-null int64\n",
+      "MachineHoursCurrentMeter    147504 non-null float64\n",
+      "UsageBand                   73670 non-null category\n",
+      "fiModelDesc                 412698 non-null category\n",
+      "fiBaseModel                 412698 non-null category\n",
+      "fiSecondaryDesc             271971 non-null category\n",
+      "fiModelSeries               58667 non-null category\n",
+      "fiModelDescriptor           74816 non-null category\n",
+      "ProductSize                 196093 non-null category\n",
+      "fiProductClassDesc          412698 non-null category\n",
+      "state                       412698 non-null category\n",
+      "ProductGroup                412698 non-null category\n",
+      "ProductGroupDesc            412698 non-null category\n",
+      "Drive_System                107087 non-null category\n",
+      "Enclosure                   412364 non-null category\n",
+      "Forks                       197715 non-null category\n",
+      "Pad_Type                    81096 non-null category\n",
+      "Ride_Control                152728 non-null category\n",
+      "Stick                       81096 non-null category\n",
+      "Transmission                188007 non-null category\n",
+      "Turbocharged                81096 non-null category\n",
+      "Blade_Extension             25983 non-null category\n",
+      "Blade_Width                 25983 non-null category\n",
+      "Enclosure_Type              25983 non-null category\n",
+      "Engine_Horsepower           25983 non-null category\n",
+      "Hydraulics                  330133 non-null category\n",
+      "Pushblock                   25983 non-null category\n",
+      "Ripper                      106945 non-null category\n",
+      "Scarifier                   25994 non-null category\n",
+      "Tip_Control                 25983 non-null category\n",
+      "Tire_Size                   97638 non-null category\n",
+      "Coupler                     220679 non-null category\n",
+      "Coupler_System              44974 non-null category\n",
+      "Grouser_Tracks              44875 non-null category\n",
+      "Hydraulics_Flow             44875 non-null category\n",
+      "Track_Type                  102193 non-null category\n",
+      "Undercarriage_Pad_Width     102916 non-null category\n",
+      "Stick_Length                102261 non-null category\n",
+      "Thumb                       102332 non-null category\n",
+      "Pattern_Changer             102261 non-null category\n",
+      "Grouser_Type                102193 non-null category\n",
+      "Backhoe_Mounting            80712 non-null category\n",
+      "Blade_Type                  81875 non-null category\n",
+      "Travel_Controls             81877 non-null category\n",
+      "Differential_Type           71564 non-null category\n",
+      "Steering_Controls           71522 non-null category\n",
+      "saleYear                    412698 non-null int64\n",
+      "saleMonth                   412698 non-null int64\n",
+      "saleDay                     412698 non-null int64\n",
+      "saleDayOfWeek               412698 non-null int64\n",
+      "saleDayOfYear               412698 non-null int64\n",
+      "dtypes: category(44), float64(3), int64(10)\n",
+      "memory usage: 63.3 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_temp.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California', 'Colorado',\n",
+       "       'Connecticut', 'Delaware', 'Florida', 'Georgia', 'Hawaii', 'Idaho',\n",
+       "       'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana',\n",
+       "       'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota',\n",
+       "       'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada',\n",
+       "       'New Hampshire', 'New Jersey', 'New Mexico', 'New York',\n",
+       "       'North Carolina', 'North Dakota', 'Ohio', 'Oklahoma', 'Oregon',\n",
+       "       'Pennsylvania', 'Puerto Rico', 'Rhode Island', 'South Carolina',\n",
+       "       'South Dakota', 'Tennessee', 'Texas', 'Unspecified', 'Utah', 'Vermont',\n",
+       "       'Virginia', 'Washington', 'Washington DC', 'West Virginia', 'Wisconsin',\n",
+       "       'Wyoming'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_temp.state.cat.categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "205615    43\n",
+       "274835     8\n",
+       "141296     8\n",
+       "212552     8\n",
+       "62755      8\n",
+       "          ..\n",
+       "410879     4\n",
+       "412476     4\n",
+       "411927     4\n",
+       "407124     4\n",
+       "409203     4\n",
+       "Length: 412698, dtype: int8"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_temp.state.cat.codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving preprocessed data\n",
+    "df_temp.to_csv(\"data/train_tmp.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Filling Missing Values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Modelling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = RandomForestRegressor(n_jobs=-1, random_state=42)\n",
+    "# model.fit(df_temp.drop(\"SalePrice\", axis=1), df_temp[\"SalePrice\"])"
    ]
   },
   {
