--- a/predicting-bulldozer-sales-price.ipynb
+++ b/predicting-bulldozer-sales-price.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "Name: saledate, Length: 1000, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,16 +218,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fa8db6d36d0>"
+       "<matplotlib.collections.PathCollection at 0x7fc3cb263a90>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -251,16 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa8dbca4fd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc3cb5e6a10>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "Name: saledate, Length: 1000, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,16 +331,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fa8d6c9fd90>"
+       "<matplotlib.collections.PathCollection at 0x7fc3cb63a510>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
        "Name: saledate, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
        "Length: 412698, dtype: int8"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +830,114 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Filling Missing Values"
+    "## 6. Filling Missing Values\n",
+    "### 6a. Numeric Missing Values\n",
+    "As shown in the innitial exploratory data, there are many columns having missing values. This will not of course be good for modeling. We need therefore treat those missing values. In this project, we have two different approaches for filling missing values. For column containing numeric missing values, we will fill it with the median. We choose the median as it is robust to outliers. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for label, content in df_temp.items():\n",
+    "    if pd.api.types.is_numeric_dtype(content):\n",
+    "        if pd.isnull(content).sum():\n",
+    "            # Add binary column telling if the data was missing\n",
+    "            df_temp[label+\"_is_missing\"] = pd.isnull(content)\n",
+    "            # Fill missing numeric values with median\n",
+    "            df_temp[label] = content.fillna(content.median())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if there's any null numeric values\n",
+    "for label, content in df_temp.items():\n",
+    "    if pd.api.types.is_numeric_dtype(content):\n",
+    "        if pd.isnull(content).sum():\n",
+    "            print(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    392562\n",
+       "True      20136\n",
+       "Name: auctioneerID_is_missing, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check to see how many examples were missing\n",
+    "df_temp.auctioneerID_is_missing.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6b. Categorical Missing Values\n",
+    "As for the column containing categorical missing values, we will convert all the missing values to be 0. When converting the string into categorical datatypes, all missing values will be coded with the value -1. To change them into 0, we need therefore add 1 to the respective value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for label, content in df_temp.items():\n",
+    "    if not pd.api.types.is_numeric_dtype(content):\n",
+    "        if pd.isnull(content).sum():\n",
+    "            # Add binary column telling if the data was missing\n",
+    "            df_temp[label+\"_is_missing\"] = pd.isnull(content)\n",
+    "            # Fill missing numeric values with median\n",
+    "            df_temp[label] = pd.Categorical(content).codes+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SalesID                         0\n",
+       "SalePrice                       0\n",
+       "MachineID                       0\n",
+       "ModelID                         0\n",
+       "datasource                      0\n",
+       "                               ..\n",
+       "Backhoe_Mounting_is_missing     0\n",
+       "Blade_Type_is_missing           0\n",
+       "Travel_Controls_is_missing      0\n",
+       "Differential_Type_is_missing    0\n",
+       "Steering_Controls_is_missing    0\n",
+       "Length: 97, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_temp.isna().sum()"
    ]
   },
   {
@@ -842,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
