--- a/predicting-bulldozer-sales-price.ipynb
+++ b/predicting-bulldozer-sales-price.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "import matplotlib.pyplot as plt\n",
     "import sklearn\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.metrics import mean_squared_log_error, mean_absolute_error, r2_score"
+    "from sklearn.metrics import mean_squared_log_error, mean_absolute_error, r2_score\n",
+    "from sklearn.model_selection import RandomizedSearchCV"
    ]
   },
   {
@@ -1861,7 +1862,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Building an evaluation function"
+    "## 8. Building an evaluation function\n",
+    "As we want to assess to model by making use of RMSLE metric as suggested by Kaggle, we will make a function for this evaluation metric. "
    ]
   },
   {
@@ -1872,7 +1874,7 @@
    "source": [
     "def rmsle(y_test, y_preds):\n",
     "    \"\"\"\n",
-    "    Caculates root mean squared log error between predictions and\n",
+    "    Calculates root mean squared log error between predictions and\n",
     "    true labels.\n",
     "    \"\"\"\n",
     "    return np.sqrt(mean_squared_log_error(y_test, y_preds))\n",
@@ -1888,6 +1890,124 @@
     "              \"Training R^2\": r2_score(y_train, train_preds),\n",
     "              \"Valid R^2\": r2_score(y_valid, val_preds)}\n",
     "    return scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. Hyperparameters Tuning with RandomizedSearchCV\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 2 candidates, totalling 10 fits\n",
+      "CPU times: user 1min 9s, sys: 13.1 s, total: 1min 22s\n",
+      "Wall time: 2min 19s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=5,\n",
+       "                   estimator=RandomForestRegressor(n_jobs=-1, random_state=42),\n",
+       "                   n_iter=2,\n",
+       "                   param_distributions={'max_depth': [None, 3, 5, 10],\n",
+       "                                        'max_features': [0.5, 1, 'sqrt',\n",
+       "                                                         'auto'],\n",
+       "                                        'max_samples': [10000],\n",
+       "                                        'min_samples_leaf': array([ 1,  3,  5,  7,  9, 11, 13, 15, 17, 19]),\n",
+       "                                        'min_samples_split': array([ 2,  4,  6,  8, 10, 12, 14, 16, 18]),\n",
+       "                                        'n_estimators': array([10, 20, 30, 40, 50, 60, 70, 80, 90])},\n",
+       "                   verbose=True)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "# Different RandomForestRegressor hyperparameters\n",
+    "rf_grid = {\"n_estimators\": np.arange(10, 100, 10),\n",
+    "           \"max_depth\": [None, 3, 5, 10],\n",
+    "           \"min_samples_split\": np.arange(2, 20, 2),\n",
+    "           \"min_samples_leaf\": np.arange(1, 20, 2),\n",
+    "           \"max_features\": [0.5, 1, \"sqrt\", \"auto\"],\n",
+    "           \"max_samples\": [10000]}\n",
+    "\n",
+    "# Instantiate RandomizedSearchCV model\n",
+    "rs_model = RandomizedSearchCV(RandomForestRegressor(n_jobs=-1,\n",
+    "                                                    random_state=42),\n",
+    "                              param_distributions=rf_grid,\n",
+    "                              n_iter=2,\n",
+    "                              cv=5,\n",
+    "                              verbose=True)\n",
+    "\n",
+    "# Fit the RandomizedSearchCV model\n",
+    "rs_model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n_estimators': 60,\n",
+       " 'min_samples_split': 2,\n",
+       " 'min_samples_leaf': 9,\n",
+       " 'max_samples': 10000,\n",
+       " 'max_features': 'auto',\n",
+       " 'max_depth': None}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the best model hyperparameters\n",
+    "rs_model.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Training MAE': 6065.248283153641,\n",
+       " 'Valid MAE': 7649.199325541804,\n",
+       " 'Training RMSLE': 0.27572232732373075,\n",
+       " 'Valid RMSLE': 0.30640092154695525,\n",
+       " 'Training R^2': 0.8325901301861065,\n",
+       " 'Valid R^2': 0.8022494089101628}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Evaluate the RandomizedSearch model\n",
+    "show_scores(rs_model)"
    ]
   },
   {
