--- a/predicting-bulldozer-sales-price.ipynb
+++ b/predicting-bulldozer-sales-price.ipynb
@@ -1896,7 +1896,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Hyperparameters Tuning with RandomizedSearchCV\n"
+    "## 9. Hyperparameters Tuning with RandomizedSearchCV\n",
+    "As we have prepared our evaluation metric, we will re-train our model. In this step, we will also add combination of parameters for our model to train on by making use of RandomizedSearchCV. It will then try certain number of calculations or combinations of them and then figure out which ones achieve the best result. "
    ]
   },
   {
@@ -2007,6 +2008,107 @@
    ],
    "source": [
     "# Evaluate the RandomizedSearch model\n",
+    "show_scores(rs_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. Train a model with the best hyperparameters\n",
+    "After training the model for around 100 iterations of randomizedsearchCV, we found some best hyperparameters which we will select to the train again on the model with more samples. The result shows an improvement in RMSLE metrics from 0.25 into 0.31."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4min 42s, sys: 5.13 s, total: 4min 47s\n",
+      "Wall time: 1min 38s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(max_features=0.5, min_samples_split=14, n_estimators=40,\n",
+       "                      n_jobs=-1, random_state=42)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# Most ideal hyperparamters\n",
+    "ideal_model = RandomForestRegressor(n_estimators=40,\n",
+    "                                    min_samples_leaf=1,\n",
+    "                                    min_samples_split=14,\n",
+    "                                    max_features=0.5,\n",
+    "                                    n_jobs=-1,\n",
+    "                                    max_samples=None,\n",
+    "                                    random_state=42) # random state so our results are reproducible\n",
+    "\n",
+    "# Fit the ideal model\n",
+    "ideal_model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Training MAE': 2953.8161137163484,\n",
+       " 'Valid MAE': 5951.247761444453,\n",
+       " 'Training RMSLE': 0.14469006962371858,\n",
+       " 'Valid RMSLE': 0.24524163989538328,\n",
+       " 'Training R^2': 0.9588145522577225,\n",
+       " 'Valid R^2': 0.8818019502450094}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Scores for ideal_model (trained on all the data)\n",
+    "show_scores(ideal_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Training MAE': 6065.248283153641,\n",
+       " 'Valid MAE': 7649.199325541803,\n",
+       " 'Training RMSLE': 0.27572232732373075,\n",
+       " 'Valid RMSLE': 0.3064009215469552,\n",
+       " 'Training R^2': 0.8325901301861064,\n",
+       " 'Valid R^2': 0.8022494089101628}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Scores on rs_model (only trained on ~10,000 examples)\n",
     "show_scores(rs_model)"
    ]
   },
