--- a/predicting-bulldozer-sales-price.ipynb
+++ b/predicting-bulldozer-sales-price.ipynb
@@ -2399,7 +2399,7 @@
    "metadata": {},
    "source": [
     "## 12. Make predictions on the test dataset using the best model\n",
-    "After preprocessing our test dataset, we can make the prediction by using the ideal model we have previously created. However, we have found an error as our test dataset (after preprocessing) has 101 columns whereas our training dataset (X_train) has 102 columns (after preprocessing). The error occurs as the test dataset was missing any auctioneerID field. To fix it, we added a column to the test dataset called `auctioneerID_is_missing` and fill it with False, since none of the auctioneerID fields are missing in the test dataset."
+    "After preprocessing our test dataset, we can make the prediction by using the ideal model we have previously created. However, we have found an error as our test dataset (after preprocessing) has 101 columns whereas our training dataset (X_train) has 102 columns (after preprocessing). The error occurs as auctioneerID field in the test dataset was filled. To fix it, we added a column to the test dataset called `auctioneerID_is_missing` and fill it with False, since none of the auctioneerID fields are missing in the test dataset."
    ]
   },
   {
@@ -2700,11 +2700,131 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SalesID</th>\n",
+       "      <th>SalesPrice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1227829</td>\n",
+       "      <td>20614.367809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1227844</td>\n",
+       "      <td>19897.801707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1227847</td>\n",
+       "      <td>44852.219594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1227848</td>\n",
+       "      <td>68346.325323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1227863</td>\n",
+       "      <td>39487.349708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12452</td>\n",
+       "      <td>6643171</td>\n",
+       "      <td>46466.092910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12453</td>\n",
+       "      <td>6643173</td>\n",
+       "      <td>17500.493352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12454</td>\n",
+       "      <td>6643184</td>\n",
+       "      <td>14296.986205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12455</td>\n",
+       "      <td>6643186</td>\n",
+       "      <td>22164.857577</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12456</td>\n",
+       "      <td>6643196</td>\n",
+       "      <td>31683.800634</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12457 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       SalesID    SalesPrice\n",
+       "0      1227829  20614.367809\n",
+       "1      1227844  19897.801707\n",
+       "2      1227847  44852.219594\n",
+       "3      1227848  68346.325323\n",
+       "4      1227863  39487.349708\n",
+       "...        ...           ...\n",
+       "12452  6643171  46466.092910\n",
+       "12453  6643173  17500.493352\n",
+       "12454  6643184  14296.986205\n",
+       "12455  6643186  22164.857577\n",
+       "12456  6643196  31683.800634\n",
+       "\n",
+       "[12457 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_preds = pd.DataFrame()\n",
+    "df_preds['SalesID'] = df_test['SalesID']\n",
+    "df_preds['SalesPrice'] = test_preds\n",
+    "df_preds"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 13. Finding Feature Importance\n",
-    "Since we have built a model which is able to make predictions, we can further examine which parts of the data led to these predictions. This is where feature importance comes in. Feature importance seeks to figure out which different attributes of the data were most important when it comes to predicting the target variable. In our case, after our model learned the patterns in the data, which bulldozer sale attributes were most important for predicting its overall sale price? Doing this for our RandomForestRegressor leads us to find the feature_importances_ attribute."
+    "Since we have built a model which is able to make predictions, we can further examine which parts of the data led to these predictions. This is where feature importance comes in. Feature importance seeks to figure out which different attributes of the data were most important when it comes to predicting the target variable. In our case, after our model learned the patterns in the data, which bulldozer sale attributes were most important for predicting its overall sale price? Doing this for our RandomForestRegressor leads us to find the feature_importances_ attribute. From the visualization, it can be seen that the sale price of a Bulldozer is mosty influenced by the year it was made."
    ]
   },
   {
